Fixed flex box alignment

--- a/src/base.css
+++ b/src/base.css
@@ -3,8 +3,7 @@
 *:after {
   box-sizing:inherit;
 }
-html, 
-body {
+html {
   margin: 0;
   padding: 0;
 }
@@ -12,6 +11,8 @@ body {
   font-family: var(--myretail-font-family);
   font-size: 14px;
   color: var(--myretail-black);
+  margin: 0 16px;
+  padding: 0;
 }
 a{
   color:inherit;
