--- a/src/components/price.css
+++ b/src/components/price.css
@@ -8,18 +8,19 @@
 }
 
 .top {
-  padding-bottom: 30px;
+  padding-bottom: 32px;
 }
 
 .bottom {
   border-top: 1px solid var(--myretail-light-grey);
   border-bottom: 1px solid var(--myretail-light-grey);
-  padding: 15px 0;
+  padding: 16px 0;
+  margin-bottom: 32px;
 }
 
 .promo {
   color: var(--myretail-red);
-  padding-bottom: 5px;
+  padding-bottom: 8px;
   &:last-child  {
     padding-bottom: 0;
   }
