--- a/src/pages/itemListing.css
+++ b/src/pages/itemListing.css
@@ -1,9 +1,11 @@
 .container {
-   flex-direction: row;
-   flex-wrap: nowrap;
-   max-width: 1170px;
-   margin: 0 auto;
-   padding: 32px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  flex-wrap: nowrap;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 32px 0;
 
   @media (width < 768px) {
     flex-direction: column;
@@ -11,14 +13,7 @@
 
   & > .left,
   & > .right {
-    display: inline-block;
-    width: 50%;
-    order: 1;
-
-    @media (width < 768px) {
-      display: block;
-      width: 100%;
-    }
+    flex: 1;
   }
 }
 
